# google-ime-skkserv-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: cache.rs  error.rs  main.rs
