[package]
name = "gskkserv"
version = "0.1.3"
authors = ["Kota Yoshitsugu"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "skkserv using Google IME"
repository = "https://github.com/yoshitsugu/google-ime-skkserv-rs"
categories = ["text-processing"]
keywords = ["skkserv", "google-ime", "Japanese"]

[badges]
travis-ci = { repository = "yoshitsugu/google-ime-skkserv-rs" }

[dependencies]
rustc-serialize = "0.3.24"
encoding = "0.2.33"
docopt = "0.8.3"
daemonize = "0.4"
reqwest = "0.9"
log = "0.4.0"
env_logger = "0.6.1"
failure = "0.1.5"
