[package]
name = "gskkserv"
version = "0.1.4"
authors = ["Kota Yoshitsugu"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "skkserv using Google IME"
repository = "https://github.com/yoshitsugu/google-ime-skkserv-rs"
categories = ["text-processing"]
keywords = ["skkserv", "google-ime", "Japanese"]

[badges]
travis-ci = { repository = "yoshitsugu/google-ime-skkserv-rs" }

[dependencies]
rustc-serialize = "0.3.24"
encoding = "0.2.33"
docopt = "1.1.1"
daemonize = "0.4"
reqwest = { version = "0.11.11", features = ["blocking"] }
log = "0.4.0"
env_logger = "0.9.0"
thiserror = "1.0.36"
